2007-11-05  Sebastien Pouliot  <sebastien@ximian.com>

	* DebuggableAttribute.cs: Don't throw on DebuggingFlags property.
	Fix part of #322850.

2007-05-16  Dick Porter  <dick@ximian.com>

	* ConditionalAttribute.cs: 
	* DebuggableAttribute.cs: 
	* Debugger.cs: 
	* DebuggerBrowsableAttribute.cs: 
	* DebuggerDisplayAttribute.cs: 
	* DebuggerHiddenAttribute.cs: 
	* DebuggerNonUserCodeAttribute.cs: 
	* DebuggerStepperBoundaryAttribute.cs: 
	* DebuggerStepThroughAttribute.cs: 
	* DebuggerTypeProxyAttribute.cs: 
	* DebuggerVisualizerAttribute.cs: 
	* StackFrame.cs: 
	* StackTrace.cs: 
	* DebuggerBrowsableState.cs: Update to 2.0 profile

2007-05-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DebuggerDisplayAttribute.cs: Default Type, Name and Value is an empty string. 
	Fix name setter. Can't set a null TargetType, and use AssemblyQualifiedName 
	for the TargetTypeName.

2007-04-27  Zoltan Varga  <vargaz@gmail.com>

	* StackTrace.cs: Fix ToString () to be compatible with MS. Fixes #81207.

2006-07-24  Miguel de Icaza  <miguel@novell.com>

	* DebuggerDisplayAttribute.cs: Update the targets

2006-01-26  Zoltan Varga  <vargaz@gmail.com>

	* DebuggerNonUserCodeAttribute.cs: New file.

2005-12-16  Sebastien Pouliot  <sebastien@ximian.com>

	* StackTrace.cs: Added, if avilable, the filename/lineno debug 
	information in ToString() like it's done on the 2.0 framework (i.e. 
	Mono will display it for all profile, MS only in 2.0). Fix bug #75932.

2005-05-25  Zoltan Varga  <vargaz@freemail.hu>

	* StackTrace.cs: Add an internal ctor which skips unmanaged frames.

2005-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* StackFrame.cs: Moved documentation comments (XML) to monodoc. 
	Removed unused method ObjectsEqual.

2005-03-14  Sebastien Pouliot  <sebastien@ximian.com>

	* StackFrame.cs: Fix CAS unit tests for NET_1_1.
	* StackTrace.cs: Fix CAS unit tests for NET_1_1.

2005-03-04  Zoltan Varga  <vargaz@freemail.hu>
